<resources>
    <string name="app_name">Lâm Food</string>
    <string name="facebook_app_id">1008747299580305</string> <string name="fb_login_protocol_scheme">fb1008747299580305</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_address_shipment">Địa chỉ giao hàng</string>
    <string name="text_select_all">Chọn tất cả</string>
    <string name="text_order_value">Đơn giá</string>
    <string name="txt_delivery_value">Phí vận chuyển</string>
    <string name="txt_discount">Giảm giá</string>
    <string name="text_amount_payment">Tổng hóa đơn</string>
    <string name="text_payment_options">Phương thức thanh toán</string>
    <string name="text_payment_by_credit_card">Thanh toán bằng thẻ tín dụng</string>
    <string name="text_payment_by_cast">Thanh toán khi nhận hàng</string>
    <string name="text_confirm_payment">Hoàn tất thanh toán</string>
    <string name="text_order">Đơn hàng</string>
    <string name="text_discount_code">Mã giảm giá</string>
    <string name="text_choose_payment_options">Chọn phương thức thanh toán</string>
    <string name="text_location">Địa điểm</string>
    <string name="hint_input_account">Email / Số điện thoại</string>
    <string name="hint_input_email">Nhập email</string>
    <string name="hint_input_dob">Nhập ngày sinh</string>
    <string name="hint_input_name">Nhập tên</string>
    <string name="hint_input_phone">Nhập số điện thoại</string>
    <string name="text_password">Mật khẩu</string>
    <string name="text_visible">Hiện</string>
    <string name="text_continue">Tiếp tục</string>
    <string name="text_skip">Bỏ qua</string>
    <string name="text_register">Đăng kí</string>
    <string name="text_login">Đăng nhập</string>
    <string name="text_home">Home</string>
    <string name="text_bag">Giỏ hàng</string>
    <string name="text_account">Tài khoản</string>
    <string name="text_login_with">Đăng nhập với</string>
    <string name="text_need_register">Bạn chưa có tài khoản?</string>
    <string name="text_had_account">Bạn đã có tài khoản? <font><u><b>Đăng nhập</b></u></font></string>
    <string name="text_forgot_password">Quên mật khẩu?</string>
    <string name="text_processing">Đang xử lí</string>
    <string name="text_resend_otp">Bạn không nhận được mã?\n<font color = 'black'><u><b>Gửi lại</b></u></font></string>
    <string name="text_confirm">Xác nhận</string>
    <string name="text_otp_confirm_des">Vui lòng nhập mã OTP được gửi đến số điện thoại %1s</string>
    <string name="text_input_otp">Nhập mã OTP</string>
    <string name="text_accept_term">Đồng ý với các điều khoản dịch vụ?</string>
    <string name="text_hint_input_search">Nhập tên quán, cửa hàng, địa điểm.....</string>
    <string name="text_recent_search">Tìm kiếm gần đây</string>
    <string name="text_search_result">Kết quả tìm kiếm</string>
    <string name="text_is_open">Đang mở</string>
    <string name="msg_server_exception">Không có phản hồi từ hệ thống! Vui lòng thử lại sau.</string>
    <string name="msg_output_empty">Không có data trả về từ hệ thống! Vui lòng thử lại sau.</string>
    <string name="text_no">No</string>
    <string name="text_yes">Yes</string>
</resources>
