<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/demo_background"
    tools:context=".view.fragment.auth.LoginFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_32sdp"
            android:background="@drawable/bg_edt_login"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/_14sdp"
                android:layout_height="@dimen/_14sdp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/_8sdp"
                android:src="@drawable/icon_user" />

            <EditText
                android:id="@+id/edt_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/_8sdp"
                android:background="@null"
                android:hint="@string/hint_input_name"
                android:textColor="@color/colorTextColorGray"
                android:textSize="@dimen/_11ssp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_32sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:background="@drawable/bg_edt_login"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/_14sdp"
                android:layout_height="@dimen/_14sdp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/_8sdp"
                android:src="@drawable/ic_phone" />

            <EditText
                android:id="@+id/edt_phone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/_8sdp"
                android:background="@null"
                android:hint="@string/hint_input_phone"
                android:inputType="phone"
                android:textColor="@color/colorTextColorGray"
                android:textSize="@dimen/_11ssp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_32sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:background="@drawable/bg_edt_login"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/_14sdp"
                android:layout_height="@dimen/_14sdp"
                android:padding="@dimen/_1sdp"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_calendar" />

            <TextView
                android:id="@+id/txt_dob"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"
                android:layout_marginStart="@dimen/_8sdp"
                android:background="@null"
                android:hint="@string/hint_input_dob"
                android:textColor="@color/colorTextColorGray"
                android:textSize="@dimen/_11ssp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_32sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:background="@drawable/bg_edt_login"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/_14sdp"
                android:layout_height="@dimen/_14sdp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/_8sdp"
                android:src="@drawable/ic_email" />

            <EditText
                android:id="@+id/edt_account"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/_8sdp"
                android:background="@null"
                android:hint="@string/hint_input_email"
                android:textColor="@color/colorTextColorGray"
                android:textSize="@dimen/_11ssp" />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_32sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:background="@drawable/bg_edt_login">

            <ImageView
                android:id="@+id/img_password"
                android:layout_width="@dimen/_14sdp"
                android:layout_height="@dimen/_14sdp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_centerVertical="true"
                android:src="@drawable/icon_password" />

            <EditText
                android:id="@+id/edt_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginEnd="@dimen/_8sdp"
                android:layout_toStartOf="@id/btn_visible"
                android:layout_toEndOf="@+id/img_password"
                android:background="@null"
                android:hint="@string/text_password"
                android:inputType="textPassword"
                android:textColor="@color/colorTextColorGray"
                android:textSize="@dimen/_11ssp" />

            <ImageView
                android:layout_marginEnd="@dimen/_8sdp"
                android:id="@+id/btn_visible"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_alignParentEnd="true"
                android:padding="@dimen/_2sdp"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_show_password"
                android:textStyle="bold" />

        </RelativeLayout>

        <CheckBox
            android:id="@+id/cb_term"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@drawable/bg_check_box_selector"
            android:padding="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_4sdp"
            android:text="@string/text_accept_term"
            android:textColor="@color/colorTextColorGray" />

        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_12sdp"
            android:background="@drawable/bg_btn_login"
            android:text="@string/text_register"
            android:textColor="@android:color/white" />
        <TextView
            android:id="@+id/txt_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_16sdp"
            android:text="@string/text_had_account"
            android:textColor="@color/colorOrange" />

    </LinearLayout>


</RelativeLayout>
