<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="@dimen/_12ssp"
        android:paddingTop="@dimen/_8sdp"
        android:paddingEnd="@dimen/_12ssp"
        android:paddingBottom="@dimen/_24sdp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/btnClose"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="@dimen/_8sdp"
                android:src="@drawable/ic_close_black_24dp" />
        </RelativeLayout>

        <TextView
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/text_input_otp"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_14ssp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtOtpConfirmDes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_8sdp"
            android:gravity="center_horizontal"
            android:text="@string/text_otp_confirm_des"
            android:textSize="@dimen/_11ssp" />

        <com.chaos.view.PinView
            android:id="@+id/pvOtp"
            style="@style/PinWidget.PinView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_16sdp"
            android:cursorVisible="true"
            android:inputType="number"
            android:itemBackground="#D8E8F8"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_18ssp"
            android:textStyle="bold"
            app:cursorWidth="2dp"
            app:hideLineWhenFilled="true"
            app:itemCount="6"
            app:itemHeight="@dimen/_40sdp"
            app:itemRadius="@dimen/_4sdp"
            app:itemSpacing="@dimen/_8sdp"
            app:itemWidth="@dimen/_32sdp"
            app:lineColor="#D8E8F8"
            app:viewType="rectangle" />

        <TextView
            android:id="@+id/btnResend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_16sdp"
            android:gravity="center_horizontal"
            android:text="@string/text_resend_otp"
            android:textSize="@dimen/_11ssp" />

        <Button
            android:id="@+id/btnDone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_12sdp"
            android:background="@drawable/bg_btn_blue"
            android:text="@string/text_confirm"
            android:textColor="@android:color/white" />

    </LinearLayout>
</androidx.cardview.widget.CardView>