<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/demo_background"
    tools:context=".view.staff.fragment.auth.LoginFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_80sdp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/_8sdp"
            android:src="@drawable/ic_food_delivery" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_36sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:background="@drawable/bg_edt_login"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/_16sdp"
                android:layout_height="@dimen/_16sdp"
                android:layout_marginLeft="@dimen/_8sdp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/icon_user" />

            <EditText
                android:layout_marginEnd="@dimen/_8sdp"
                android:id="@+id/edtAccount"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:layout_marginStart="@dimen/_8sdp"
                android:background="@null"
                android:hint="@string/hint_input_account"
                android:textColor="@color/colorTextColorGray"
                android:textSize="@dimen/_11ssp"
                tools:text="tunglamhd98@gmail.com" />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_36sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:gravity="center_vertical"
            android:background="@drawable/bg_edt_login">

            <ImageView
                android:id="@+id/imgPassword"
                android:layout_width="@dimen/_16sdp"
                android:layout_height="@dimen/_16sdp"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_centerVertical="true"
                android:src="@drawable/icon_password" />

            <EditText
                android:id="@+id/edtPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginEnd="@dimen/_8sdp"
                android:layout_toStartOf="@id/btnVisible"
                android:layout_toEndOf="@+id/imgPassword"
                android:background="@null"
                android:hint="@string/text_password"
                android:gravity="center_vertical"
                android:inputType="textPassword"
                android:textColor="@color/colorTextColorGray"
                android:textSize="@dimen/_11ssp"
                tools:text="tunglamhd98@gmail.com" />

            <ImageView
                android:id="@+id/btnVisible"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_alignParentEnd="true"
                android:padding="@dimen/_2sdp"
                android:layout_marginEnd="@dimen/_8sdp"
                android:src="@drawable/ic_show_password"
                android:layout_centerVertical="true"
                android:textStyle="bold" />

        </RelativeLayout>

        <TextView
            android:id="@+id/btnForgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:text="@string/text_forgot_password"
            android:textColor="@color/colorTextColorGray" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_12sdp"
            android:background="@drawable/bg_btn_login"
            android:text="@string/text_login"
            android:onClick="onBtnLoginClicked"
            android:textColor="@android:color/white"
            tools:ignore="OnClick" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_16sdp"
            android:orientation="horizontal">

            <View
                android:layout_width="@dimen/_60sdp"
                android:layout_height="@dimen/_1sdp"
                android:layout_gravity="center_vertical"
                android:background="@color/colorBorderEditText" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginEnd="@dimen/_8sdp"
                android:text="@string/text_login_with"
                android:textColor="@color/colorTextColorGray" />

            <View
                android:layout_width="@dimen/_60sdp"
                android:layout_height="@dimen/_1sdp"
                android:layout_gravity="center_vertical"
                android:background="@color/colorBorderEditText" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_16sdp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/btnLoginFacebook"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:layout_marginEnd="@dimen/_16sdp"
                android:onClick="onBtnLoginFacebookClicked"
                android:src="@drawable/ic_facebook"
                tools:ignore="OnClick" />

            <ImageView
                android:id="@+id/btnLoginGoogle"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:onClick="onBtnLoginGoogleClicked"
                android:src="@drawable/ic_google"
                tools:ignore="OnClick" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/txtRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/_28sdp"
        android:text="@string/text_need_register"
        android:onClick="onTxtRegisterClicked"
        android:textColor="@color/colorOrange"
        tools:ignore="OnClick" />
</RelativeLayout>
