<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragment.PaymentFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/rl_order_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginEnd="@dimen/_12sdp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_amount_payment"
                android:textSize="@dimen/_12ssp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_amount_payment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_11ssp"
                android:textStyle="bold"
                android:text="25.000đ" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_marginEnd="@dimen/_12sdp"
            android:alpha="0.4"
            android:background="@android:color/darker_gray" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:text="@string/text_payment_options"
            android:textSize="@dimen/_12ssp"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginEnd="@dimen/_12sdp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_72sdp"
                android:layout_toStartOf="@+id/rg_payment"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_36sdp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="@dimen/_20sdp"
                        android:layout_height="@dimen/_20sdp"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/ic_card" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="@dimen/_12sdp"
                        android:text="@string/text_payment_by_credit_card"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/_11ssp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_36sdp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="@dimen/_20sdp"
                        android:layout_height="@dimen/_20sdp"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/ic_money" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="@dimen/_12sdp"
                        android:text="@string/text_payment_by_cast"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/_11ssp" />
                </LinearLayout>

            </LinearLayout>

            <RadioGroup
                android:id="@+id/rg_payment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true">

                <RadioButton
                    android:id="@+id/rd_card"
                    android:layout_width="@dimen/_36sdp"
                    android:layout_height="@dimen/_36sdp" />

                <RadioButton
                    android:id="@+id/rd_cast"
                    android:layout_width="@dimen/_36sdp"
                    android:layout_height="@dimen/_36sdp"
                    android:checked="true"
                    android:gravity="center" />
            </RadioGroup>
        </RelativeLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/btn_confirm_payment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginEnd="@dimen/_12sdp"
        android:layout_marginBottom="@dimen/_16sdp"
        android:background="@drawable/bg_btn_green"
        android:gravity="center"
        android:padding="@dimen/_4sdp"
        android:text="@string/text_confirm_payment"
        android:textColor="@android:color/white"
        android:textSize="@dimen/_12ssp"
        android:textStyle="bold" />


</RelativeLayout>